Add Ski- prefix

--- a/config.json
+++ b/config.json
@@ -25,7 +25,8 @@
     "Bier",
     "Holz",
     "Stein",
-    "Schnitzl"
+    "Schnitzl",
+    "Ski"
   ],
   "channel_name_suffix": [
     "stüberl",
